# tg_bot_teleport_new

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260714_0001_initial.py  20260714_0002_admin.py  20260714_0003_payments.py  20260714_0004_subscriptions_admin_settings.py  20260714_0005_audit_race_indexes.py  20260715_0006_user_email.py  20260716_0007_welcome_message_sent_at.py  20260716_0008_partners_referrals.py  20260716_0009_admin_chat_message_drafts.py  20260720_0010_payment_funnel_tracking.py
src/aiosqlite/: __init__.py
src/teleport_bot/: main.py  scheduler.py
src/teleport_bot/bot/: app.py  middlewares.py  states.py
src/teleport_bot/config/: logging.py  settings.py
src/teleport_bot/db/: session.py
src/teleport_bot/models/: db.py  enums.py
src/teleport_bot/repositories/: admin.py  events.py  payments.py  settings.py  subscriptions.py  users.py
src/teleport_bot/services/: access.py  admin_chat_publisher.py  admin_notifications.py  formatting.py  payments.py  public_welcome.py  questionnaire.py  referrals.py  subscriptions.py  telegram.py  yookassa.py
src/teleport_bot/texts/: content.py
src/teleport_bot/web/: health.py
tests/: conftest.py  test_access_service.py  test_admin.py  test_admin_chat_publisher.py  test_private_chat_guards.py  test_questionnaire.py  test_referrals.py  test_repositories.py  test_subscription_lifecycle.py  test_yookassa_diagnostics.py  test_yookassa_receipt.py  test_yookassa_webhook.py
(+4 files in other folders)
